--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,9 @@ body {
 /* site nav */
 
 .site-nav .link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
   color: var(--black-color);
   text-decoration: none;
 }
@@ -76,14 +79,12 @@ body {
   text-align: center;
 }
 .section-name {
-  font-family: Roboto;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   color: var(--black-color);
 }
 .section-text {
-  font-family: Roboto;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -91,7 +92,6 @@ body {
 }
 /* Наша команда */
 .comand-name {
-  font-family: Roboto;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -106,12 +106,11 @@ body {
   text-decoration: none;
 }
 .adress-text {
-  font-family: Roboto;
-  font-style: normal;
   font-weight: 400;
+  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
-  color: var(--white-color);
+  color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
 }
 .logo-footer {
@@ -135,4 +134,28 @@ body {
   font-size: 16px;
   line-height: 1.87;
   color: var(--grey-color)
+}
+/* Кнопки */
+.button {
+  background-color: #F5F4FA;
+  color: var(--black-color);
+}
+.button:hover {
+  background-color: var(--blue-color);
+  color: var(--white-color);
+}
+.button-primery {
+  background-color: var(--blue-color);
+  color: var(--white-color);
+}
+
+.button .link .current {
+  background-color: 2196F3;
+  color: var(--white-color);
+}
+  /* .link-title {
+    text-decoration: none;
+  } */
+.title {
+  text-decoration: none;
 }
